Added Docker role
Installs and configures Docker on RPi4. It may be incomplete as I didn't
test it with a fresh OS installation.

--- a/homelab.yml
+++ b/homelab.yml
@@ -6,3 +6,7 @@
     - role: secured_rpi
       vars:
         secured_user: "{{ rpi4.ansible_user }}"
+    - role: docker
+      vars:
+        docker_root: "{{ ssd_mount }}/docker"
+        docker_users: ["{{ rpi4.ansible_user }}"]
