--- a/homelab.yml
+++ b/homelab.yml
@@ -5,12 +5,14 @@
   roles:
     - role: secured_rpi
       vars:
-        secured_user: "{{ rpi4.ansible_user }}"
+        secured_user: "{{ ansible_user }}"
     - role: docker
       tags: [ docker ]
       vars:
         docker_root: "{{ ssd_mount }}/docker"
-        docker_users: ["{{ rpi4.ansible_user }}"]
+        docker_users: ["{{ ansible_user }}"]
     - role: traefik
       tags: [ traefik ]
+    - role: pihole
+      tags: [ pihole ]
       
