--- a/roles/pihole/tasks/main.yml
+++ b/roles/pihole/tasks/main.yml
@@ -63,3 +63,7 @@
       traefik.http.routers.pihole.rule: "Host(`pihole.{{ domain }}`)"
       traefik.http.routers.pihole.service: "pihole"
       traefik.http.services.pihole.loadBalancer.server.port: "8068"
+      traefik.http.routers.pihole.middlewares: "pihole-admin-redirect"
+      traefik.http.middlewares.pihole-admin-redirect.redirectregex.regex: '^(http:\/\/(\[[\w:.]+\]|[\w\._-]+)(:\d+)?)\/$'
+      traefik.http.middlewares.pihole-admin-redirect.redirectregex.replacement: "${1}/admin/"
+      traefik.http.middlewares.pihole-admin-redirect.redirectregex.permanent: "true"
