Configured HTTPS cert resolvers in Traefik
I uses Let's Encrypt with Cloudflare DNS provider. DNS challenge is used
so Traefik doesn't need to be open to the Internet.

Automatically redirect HTTP requests to HTTPS.

Renamed 'http' and 'https' endpoints to 'web' and 'websecure',
respectively. It follows naming convention from Traefik doc.

--- a/host_vars/rpi4.yaml
+++ b/host_vars/rpi4.yaml
@@ -6,6 +6,7 @@ ansible_user: pi
 tailscale_ip: "{{ lookup('env', 'rpi4_tailscale_ip') }}"
 local_ip: "{{ lookup('env', 'rpi4_local_ip') }}"
 pihole_webserver_api_password: "{{ lookup('env', 'pihole_webserver_api_password') }}"
+cloudflare_dns_api_token: "{{ lookup('env', 'cloudflare_dns_api_token')}}"
 
 ssd_mount: /media/DataSSD
 docker_mounts_dir: "{{ ssd_mount }}/docker-mounts"
