--- a/roles/traefik/tasks/main.yml
+++ b/roles/traefik/tasks/main.yml
@@ -7,7 +7,7 @@
     mode: '0755'
   loop:
     - "{{ traefik_mount_dir }}"
-    - "{{ traefik_mount_dir }}/data"
+    - "{{ traefik_mount_dir }}/letsencrypt"
     - "{{ traefik_mount_dir }}/logs"
 
 - name: Deploy Traefik Docker container
@@ -22,6 +22,7 @@
       - name: homelab
     env:
       TZ: '{{ tz }}'
+      CF_DNS_API_TOKEN: "{{ cloudflare_dns_api_token }}"
     command:
       - "--global.checkNewVersion=true"
       - "--global.sendAnonymousUsage=false"
@@ -35,18 +36,29 @@
       - "--providers.docker.endpoint=unix:///var/run/docker.sock"
       - "--providers.docker.exposedByDefault=false"
       - "--providers.docker.watch=true"
-      - "--entrypoints.http.address=:80"
+      - "--entrypoints.web.address=:80"
+      - "--entrypoints.web.http.redirections.entrypoint.to=websecure"
+      - "--entrypoints.web.http.redirections.entrypoint.scheme=https"
+      - "--entrypoints.websecure.address=:443"
+      - "--entrypoints.websecure.asDefault=true"
+      # Let's Encrypt config
+      - "--certificatesresolvers.letsencrypt.acme.dnschallenge=true"
+      - "--certificatesresolvers.letsencrypt.acme.dnschallenge.provider=cloudflare"
+      - "--certificatesresolvers.letsencrypt.acme.email=acme@ganczarek.info"
+      - "--certificatesresolvers.letsencrypt.acme.storage=/letsencrypt/acme.json"
     ports:
       - "80:80"
+      - "443:443"
     volumes:
       - '/var/run/docker.sock:/var/run/docker.sock:ro'
-      - '{{ traefik_mount_dir }}/data:/data'
+      - '{{ traefik_mount_dir }}/letsencrypt:/letsencrypt'
       - '{{ traefik_mount_dir }}/logs:/logs'
     labels:
       traefik.enable: "true"
-      traefik.http.routers.traefik-dashboard.entrypoints: "http"
       traefik.http.routers.traefik-dashboard.rule: "Host(`traefik.{{ domain }}`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
       traefik.http.routers.traefik-dashboard.service: "api@internal"
+      traefik.http.routers.traefik-dashboard.tls: "true"
+      traefik.http.routers.traefik-dashboard.tls.certresolver: "letsencrypt"
       traefik.http.routers.traefik-dashboard.middlewares: "traefik-dashboard-redirect"
       traefik.http.middlewares.traefik-dashboard-redirect.redirectregex.regex: '^(http:\/\/(\[[\w:.]+\]|[\w\._-]+)(:\d+)?)\/$'
       traefik.http.middlewares.traefik-dashboard-redirect.redirectregex.replacement: "${1}/dashboard/"
