--- a/host_vars/rpi4.yaml
+++ b/host_vars/rpi4.yaml
@@ -7,6 +7,9 @@ tailscale_ip: "{{ lookup('env', 'rpi4_tailscale_ip') }}"
 local_ip: "{{ lookup('env', 'rpi4_local_ip') }}"
 pihole_webserver_api_password: "{{ lookup('env', 'pihole_webserver_api_password') }}"
 cloudflare_dns_api_token: "{{ lookup('env', 'cloudflare_dns_api_token')}}"
+authelia_jwt_secret: "{{ lookup('env', 'authelia_jwt_secret') }}" 
+authelia_storage_encryption_key: "{{ lookup('env', 'authelia_storage_encryption_key') }}" 
+authelia_session_secret: "{{ lookup('env', 'authelia_session_secret') }}"
 
 ssd_mount: /media/DataSSD
 docker_mounts_dir: "{{ ssd_mount }}/docker-mounts"
