--- a/homelab.yml
+++ b/homelab.yml
@@ -17,4 +17,8 @@
       tags: [ traefik ]
     - role: pihole
       tags: [ pihole ]
+      vars:
+        tailscale_ip: "{{ ansible_facts.tailscale0.ipv4.address }}"
+        local_ip: "{{ ansible_facts.default_ipv4.address }}"  
+        
       
