Handle DNS-over-TLS with Nginx
Android requires DoT - unless explicitly disabled - but Pi-hole doesn't
support it. Hence, handle SSL handshake with Nginx and proxy the
request.

I tried to do the same with Traefik but got nowhere:
```
ERR Error while handling TCP connection error="readfrom tcp x.x.x.x:38110->y.y.y.y:53: tls: client requested unsupported application protocols ([dot])"
```

--- a/homelab.yml
+++ b/homelab.yml
@@ -2,6 +2,9 @@
 
 - hosts: rpi4
   become: true
+  vars:
+    tailscale_ip: "{{ ansible_facts.tailscale0.ipv4.address }}"
+    local_ip: "{{ ansible_facts.default_ipv4.address }}"
   roles:
     - role: secured_rpi
       vars:
@@ -17,8 +20,9 @@
       tags: [ traefik ]
     - role: pihole
       tags: [ pihole ]
-      vars:
-        tailscale_ip: "{{ ansible_facts.tailscale0.ipv4.address }}"
-        local_ip: "{{ ansible_facts.default_ipv4.address }}"  
-        
+    - role: certbot
+      tags: [ certbot ]
+    - role: nginx
+      tags: [ nginx ]
+   
       
