--- a/host_vars/rpi4.yaml
+++ b/host_vars/rpi4.yaml
@@ -7,9 +7,12 @@ cloudflare_dns_api_token: "{{ lookup('env', 'cloudflare_dns_api_token')}}"
 authelia_jwt_secret: "{{ lookup('env', 'authelia_jwt_secret') }}" 
 authelia_storage_encryption_key: "{{ lookup('env', 'authelia_storage_encryption_key') }}" 
 authelia_session_secret: "{{ lookup('env', 'authelia_session_secret') }}"
+tailscale_auth_key: "{{ lookup('env', 'rpi4_tailscale_auth_key') }}"
 
 ssd_mount: /media/DataSSD
 docker_mounts_dir: "{{ ssd_mount }}/docker-mounts"
 
+tailscale_gid:   "10010"
+tailscale_uid:   "10011"
 pihole_uid:      "10012"
 pihole_gid:      "10013"
