Added Homepage dashboard with enabled Docker integration
Services are dynamically discovered with use of Docker labels.

--- a/homelab.yml
+++ b/homelab.yml
@@ -26,5 +26,6 @@
       tags: [ nginx ]
     - role: tailscale
       tags: [ tailscale ]
-   
+    - role: homepage
+      tags: [ homepage ]
       
