--- a/host_vars/rpi4.yaml
+++ b/host_vars/rpi4.yaml
@@ -16,3 +16,5 @@ tailscale_gid:   "10010"
 tailscale_uid:   "10011"
 pihole_uid:      "10012"
 pihole_gid:      "10013"
+homepage_gid:    "10014"
+homepage_uid:    "10015"
