--- a/roles/docker/handlers/main.yml
+++ b/roles/docker/handlers/main.yml
@@ -4,3 +4,7 @@
   service:
     name: 'docker'
     state: 'restarted'
+
+- name: 'systemd daemon reload'
+  ansible.builtin.systemd_service:
+    daemon_reload: true
