--- a/homelab.yml
+++ b/homelab.yml
@@ -14,6 +14,8 @@
       vars:
         docker_root: "{{ ssd_mount }}/docker"
         docker_users: ["{{ ansible_user }}"]
+    - role: openldap
+      tags: [ openldap ]
     - role: authelia
       tags: [ authelia ]
     - role: traefik
