Configured SSSD on RPi4
It doesn't completely work. During authentication TLS is started and
request to OpenLDAP fails.

References:
- https://kb.symas.com/en_US/configuration/sssd-and-openldap#configuring-the-remote-ldap-server-18
- https://github.com/hellofresh/ansible-sssd-ldap/tree/master

--- a/homelab.yml
+++ b/homelab.yml
@@ -16,6 +16,8 @@
         docker_users: ["{{ ansible_user }}"]
     - role: openldap
       tags: [ openldap ]
+    - role: sssd
+      tags: [ sssd ]
     - role: authelia
       tags: [ authelia ]
     - role: traefik
