--- a/hosts.yml
+++ b/hosts.yml
@@ -4,5 +4,10 @@ homelab:
   # host details (like IP address) stored in SSH config
   hosts:
     rpi4:
-      ansible_user: "{{ rpi4.ansible_user }}"
+      ansible_python_interpreter: /usr/bin/python3
+      ansible_user: pi
       ansible_become_pass: "{{ lookup('env', 'rpi4_root_password') }}"
+    xu4:
+      ansible_python_interpreter: /usr/bin/python3
+      ansible_user: xu4
+      ansible_become_pass: "{{ lookup('env', 'xu4_root_password') }}"
