Updated Docker (and installed on Odroid XU4)
Odroid XU4 runs Ubuntu 24.4 while rpi4 is still on legacy
Raspberry Pi OS (Debian bullseye).

Followed instructions from Docker docs ([1] & [2])

[1] https://docs.docker.com/engine/install/ubuntu/
[2] https://docs.docker.com/engine/install/debian/

--- a/homelab.yml
+++ b/homelab.yml
@@ -42,3 +42,7 @@
     - role: secured
       vars:
         secured_user: "{{ ansible_user }}"
+    - role: docker
+      tags: [ docker ]
+      vars:
+        docker_users: ["{{ ansible_user }}"]
